fixes scroll for content exciding overflow

--- a/src/modules/commonContainers/fullwidthContainer/full_width_container.module.scss
+++ b/src/modules/commonContainers/fullwidthContainer/full_width_container.module.scss
@@ -4,11 +4,14 @@
   // width: 100%;
   // height: 100%;
   // background: $primary-color;
-  
+  overflow-y: scroll;
+
   .content_container {
     // margin: 14px;
     background: white;
     // overflow: scroll;
+    overflow-y: scroll;
+
   }
 }
 
